[package]
name = "bds_sdk"
version = "0.1.0"
edition = "2021"
authors = ["banchen19 <banchen19@gmail.com>"]
# description = "RakNet Protocol implementation by Rust."
# repository = "https://github.com/b23r0/rust-raknet"
# documentation = "https://docs.rs/rust-raknet/latest/rust_raknet/"
# readme = "README.md"
license = "MIT"
keywords = ["raknet","datapack", "networking" , "bds_sdk"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-raknet = "0.12.0"
wd_event = "0.6.1"
tokio = {version = "1.20.1", features = ["full"]}